@@ -26,7 +26,7 @@ set -e
 
 OMV_AVAHIDAEMON_SMBSERVICE=${OMV_AVAHIDAEMON_SMBSERVICE:-"/etc/avahi/services/smb.service"}
 OMV_AVAHIDAEMON_SMBSERVICE_NAME=${OMV_AVAHIDAEMON_SMBSERVICE_NAME:-"%h - SMB/CIFS"}
-OMV_AVAHIDAEMON_SMBSERVICE_PORT=${OMV_AVAHIDAEMON_SMBSERVICE_PORT:-"139"}
+OMV_AVAHIDAEMON_SMBSERVICE_PORT=${OMV_AVAHIDAEMON_SMBSERVICE_PORT:-"445"}
 
 # Is the service enabled?
 rm -f ${OMV_AVAHIDAEMON_SMBSERVICE}
