@@ -45,6 +45,8 @@ OMV_SAMBA_LOADPRINTERS=${OMV_SAMBA_LOADPRINTERS:-"no"}
 OMV_SAMBA_DISABLESPOOLSS=${OMV_SAMBA_DISABLESPOOLSS:-"yes"}
 OMV_SAMBA_PRINTING=${OMV_SAMBA_PRINTING:-"bsd"}
 OMV_SAMBA_PRINTCAPNAME=${OMV_SAMBA_PRINTCAPNAME:-"/dev/null"}
+OMV_SAMBA_UNIXEXTENSIONS=${OMV_SAMBA_UNIXEXTENSIONS:-"yes"}
+OMV_SAMBA_WIDELINKS=${OMV_SAMBA_WIDELINKS:-"no"}
 
 xmlstarlet sel -t -m "//services/smb" \
   -o "#======================= Global Settings =======================" -n \
@@ -72,6 +74,8 @@ xmlstarlet sel -t -m "//services/smb" \
   -o "disable spoolss = ${OMV_SAMBA_DISABLESPOOLSS}" -n \
   -o "printing = ${OMV_SAMBA_PRINTING}" -n \
   -o "printcap name = ${OMV_SAMBA_PRINTCAPNAME}" -n \
+  -o "unix extensions = ${OMV_SAMBA_UNIXEXTENSIONS}" -n \
+  -o "wide links = ${OMV_SAMBA_WIDELINKS}" -n \
   -i "count(shares/*[guestok = '1']) > 0" -o "map to guest = ${OMV_SAMBA_MAPTOGUEST}" -n -b \
   -i "usesendfile[. = '1']" -o "use sendfile = yes" -n -b \
   -i "usesendfile[. = '0']" -o "use sendfile = no" -n -b \
